--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 </head>
 <body>
 
-lol
+
+<button class="rock">Rock 👊</button>
+<button class="paper">Paper ✋</button>
+<button class="scissors">Scissors ✌</button>
 </body>
 </html>
