--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
   <div class="counters">
     <div class="human-counter">
       <h1>Human</h1>
-      <div class="player-victories">3</div>
+      <div class="player-victories">0</div>
     </div>
 
     <div class="computer-counter">
       <h1>Computer</h1>
-      <div class="computer-victories">4</div>
+      <div class="computer-victories">0</div>
     </div>
   </div>
 
-  <div class="winner-result rainbow">You won!</div>
+  <div class="winner-result"></div>
 </div>
 
 <div class="button-container">
